# MinecartCPP

./: .gitignore  CMakeLists.txt  README.md  game.lua  imgui.ini
Editor/: CMakeLists.txt
Editor/include/: editor.h  project.h
Editor/src/: directory_tree_view.cpp  edit_scene.cpp  gui.cpp  main.cpp  main_scene.cpp  project.cpp
Minecart/: CMakeLists.txt
Minecart/include/: mc_logging.h  mc_lua.h  mc_scene.h  mc_script.h  mc_scripting_lib.h  mc_string_utils.h  mc_testing.h  minecart.h
Minecart/include/backends/: mc_backend.h
Minecart/include/backends/glfw_backend/: mc_backend.h  mc_framebuffer.h
Minecart/src/: glfw_backend.cpp  logging.cpp  lua.cpp  minecart.cpp  script.cpp  scripting_lib.cpp  string_utils.cpp  test.cpp
cmake/: 3rdparty.cmake  entt.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  imgui_file.cmake  json.cmake  lua.cmake  minecart.cmake  minecart_editor.cmake  raylib.cmake  rlImGui.cmake  zep.cmake
examples/demo/: project.json
examples/demo/Scripts/: game.lua
resources/minecart/assets/shaders/: default_fragment.glsl  default_vertex.glsl
